# analyze_xlsx

./: Cargo.toml
src/: _impls.rs  _traits.rs  analyze.rs  lib.rs  main.rs
src/_impls/: _xl.rs  zip.rs
src/_impls/_xl/: shared_strings.rs
src/_structs/: _xl.rs
src/_structs/_xl/: shared_strings.rs
src/_traits/: analyze.rs  zip.rs
tests/: analyze_test.rs  in.xlsx
