[package]
name = "analyze_xlsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
quick-xml = { version = "0.28.2", features = [ "serialize" ] }
anyhow = "1.0.71"
regex = "1.8.1"
zip = "0.6.4"
clap = { version = "4.2.2", features = ["derive"] }

[dev-dependencies]
mockall = "0.11.2"